Fix selected icon styles for dark mode
Utilize colors as directed by designer.

--- a/packages/components/src/mobile/link-settings/style.native.scss
+++ b/packages/components/src/mobile/link-settings/style.native.scss
@@ -8,8 +8,12 @@
 	color: #87a6bc;
 }
 
-.selectedOptionIcon {
-	color: $blue-wordpress;
+.optionIcon {
+	color: $blue-50;
+}
+
+.optionIconDark {
+	color: $blue-30;
 }
 
 .unselectedOptionIcon {
